# TinyWiiBackupManagerInstaller

./: Cargo.toml  postinstall.ps1  uninstall.ps1
.github/workflows/: release.yml
src/: main.rs  reg.rs  style.rs  util.rs
