[package]
name = "TinyWiiBackupManagerInstaller"
version = "0.1.0-beta.4"
edition = "2024"
rust-version = "1.92"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "GPL-3.0-only"

[dependencies]
iced = { version = "0.14", default-features = false, features = [
  "thread-pool",
  "tiny-skia",
] }
minreq = { version = "2.14", features = ["https"] }
zip = { version = "7.0", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }
anyhow = "1.0"
mslnk = "0.1"
directories = "6.0"
windows-registry = "0.6"
native-dialog = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
